# hwas

./: .gitignore  2  DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  meenv.sh  py_requirements.txt  setup.cfg
R/: RcppExports.R  batch_cols.R  covariates.R  decomp_kinship.R  est_herit.R  fit1_pg.R  hwas_by_chrm.R  init.R  normalization.R  utils.R  var_decomp_by_chrm.R
hwas/: __main__.py  __version__.py  _config.py  _constants.py  _db.py  _hgrm.py  _init.py  _intersect.py  _io.py  _pipeline.py  _query.py  _set.py  _set_parameters.py  _settings.py  _templates.py  init.py  intersect.py  query.py
hwas/R/: trait_intersect.R  trait_io.R
hwas/templates/: association.sh.template  config  config.template  hgrm.sh.template  hwas.sh  hwas.sh.template  pipeline.sh.template
inst/: COPYRIGHT  build.sh
inst/examples/: association_analysis.R
inst/exdata/: geno_test_data.vcf  geno_test_data_compressed.bcf  geno_test_data_compressed.bcf.csi  geno_test_data_uncompressed.bcf  pos.exclude_snps  pos.tsv  samples  samps.exclude_samples
inst/include/: bcfio.h  bcfio.hpp  grm.h  (+3 more)
src/: Makevars  Makevars.in  RcppExports.cpp  assoc.cpp  bcfio.cpp  brent_fmin.cpp  brent_fmin.h  config.py  data_model.py  fit1_pg.cpp  fit1_pg.h  grm.cpp  helloworld.cpp  hts_interface.cpp  hwas_grm.cpp  init.sh  linreg.cpp  linreg.h  linreg_eigen.cpp  linreg_eigen.h  lmm.cpp  lmm.h  matrix.cpp  matrix.h  query_dataset.py  r_message.cpp  r_message.h  textio.cpp
test/: test_config.py  test_db.py  test_db_get_covariate_names.py  test_db_validation.py
tests/: test_hts_interface.R  test_init.R
(+9 files in other folders)
