[metadata]
name = hwas
version = attr: hwas.__version__.version
author = Robert Vogel
author_email = rmvogel [at] ucsd [dot] edu
description = Palmer Lab pipeline for haplotype wide association study
long_description = file: README.md
license = MIT


[options]
packages = find:
python_requires = >= 3.9
install_requires =
    psycopg >= 3.2    


[options.packages.find]
exclude =
    tests*
    R*
    env* 


[options.package_data]


[options.entry_points]
console_scripts = 
    hwas = hwas.__main__:main

